src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__i.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 59,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 26,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 26,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 9,
            "name": "obj"
          },
          "init": {
            "type": "ObjectExpression",
            "start": 12,
            "end": 26,
            "properties": [
              {
                "type": "ObjectProperty",
                "start": 14,
                "end": 18,
                "key": {
                  "type": "Identifier",
                  "start": 14,
                  "end": 15,
                  "name": "a"
                },
                "value": {
                  "type": "Literal",
                  "start": 17,
                  "end": 18,
                  "value": 1,
                  "raw": "1"
                }
              },
              {
                "type": "ObjectProperty",
                "start": 20,
                "end": 24,
                "key": {
                  "type": "Identifier",
                  "start": 20,
                  "end": 21,
                  "name": "b"
                },
                "value": {
                  "type": "Literal",
                  "start": 23,
                  "end": 24,
                  "value": 2,
                  "raw": "2"
                }
              }
            ]
          }
        }
      ],
      "kind": "const"
    },
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 32,
      "end": 59,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 38,
          "end": 59,
          "id": {
            "type": "Identifier",
            "start": 38,
            "end": 44,
            "name": "height"
          },
          "init": {
            "type": "BinaryExpression",
            "start": 47,
            "end": 59,
            "operator": "-",
            "left": {
              "type": "Literal",
              "start": 47,
              "end": 48,
              "value": 1,
              "raw": "1"
            },
            "right": {
              "type": "MemberExpression",
              "start": 51,
              "end": 59,
              "object": {
                "type": "Identifier",
                "start": 51,
                "end": 54,
                "name": "obj"
              },
              "property": {
                "type": "Literal",
                "start": 55,
                "end": 58,
                "value": "a",
                "raw": "\"a\""
              },
              "computed": false
            }
          }
        }
      ],
      "kind": "const"
    }
  ]
}
