src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__kw_function_all_named.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 21,
          "id": {
            "end": 3,
            "name": "val",
            "start": 0,
            "type": "Identifier"
          },
          "init": {
            "arguments": [
              {
                "type": "LabeledArg",
                "label": {
                  "type": "Identifier",
                  "name": "x"
                },
                "arg": {
                  "end": 14,
                  "name": "a",
                  "start": 13,
                  "type": "Identifier",
                  "type": "Identifier"
                }
              },
              {
                "type": "LabeledArg",
                "label": {
                  "type": "Identifier",
                  "name": "y"
                },
                "arg": {
                  "end": 20,
                  "name": "b",
                  "start": 19,
                  "type": "Identifier",
                  "type": "Identifier"
                }
              }
            ],
            "callee": {
              "end": 9,
              "name": "foo",
              "start": 6,
              "type": "Identifier"
            },
            "end": 21,
            "start": 6,
            "type": "CallExpressionKw",
            "type": "CallExpressionKw",
            "unlabeled": null
          },
          "start": 0,
          "type": "VariableDeclarator"
        }
      ],
      "end": 21,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 21,
  "start": 0
}
