src/wasm-lib/kcl/src/parser/snapshots/kcl_lib__parser__parser_impl__snapshot_tests__m.snap
---
source: kcl/src/parser/parser_impl.rs
expression: actual
---
{
  "start": 0,
  "end": 62,
  "body": [
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 0,
      "end": 26,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 6,
          "end": 26,
          "id": {
            "type": "Identifier",
            "start": 6,
            "end": 9,
            "name": "obj"
          },
          "init": {
            "type": "ObjectExpression",
            "start": 12,
            "end": 26,
            "properties": [
              {
                "type": "ObjectProperty",
                "start": 14,
                "end": 18,
                "key": {
                  "type": "Identifier",
                  "start": 14,
                  "end": 15,
                  "name": "a"
                },
                "value": {
                  "type": "Literal",
                  "start": 17,
                  "end": 18,
                  "value": 1,
                  "raw": "1"
                }
              },
              {
                "type": "ObjectProperty",
                "start": 20,
                "end": 24,
                "key": {
                  "type": "Identifier",
                  "start": 20,
                  "end": 21,
                  "name": "b"
                },
                "value": {
                  "type": "Literal",
                  "start": 23,
                  "end": 24,
                  "value": 2,
                  "raw": "2"
                }
              }
            ]
          }
        }
      ],
      "kind": "const"
    },
    {
      "type": "VariableDeclaration",
      "type": "VariableDeclaration",
      "start": 31,
      "end": 62,
      "declarations": [
        {
          "type": "VariableDeclarator",
          "start": 37,
          "end": 62,
          "id": {
            "type": "Identifier",
            "start": 37,
            "end": 43,
            "name": "height"
          },
          "init": {
            "type": "ArrayExpression",
            "start": 46,
            "end": 62,
            "elements": [
              {
                "type": "BinaryExpression",
                "start": 47,
                "end": 58,
                "operator": "-",
                "left": {
                  "type": "MemberExpression",
                  "start": 47,
                  "end": 55,
                  "object": {
                    "type": "Identifier",
                    "type": "Identifier",
                    "start": 47,
                    "end": 50,
                    "name": "obj"
                  },
                  "property": {
                    "type": "Literal",
                    "type": "Literal",
                    "start": 51,
                    "end": 54,
                    "value": "a",
                    "raw": "\"a\""
                  },
                  "computed": false
                },
                "right": {
                  "type": "Literal",
                  "start": 57,
                  "end": 58,
                  "value": 1,
                  "raw": "1"
                }
              },
              {
                "type": "Literal",
                "start": 60,
                "end": 61,
                "value": 0,
                "raw": "0"
              }
            ]
          }
        }
      ],
      "kind": "const"
    }
  ]
}
